--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-YOUTUBE_API_KEY=AIzaSyBErN_f-sHIFuO4mFCyHEBwm7OS1xlJeA4
-REDIS_URL=redis://localhost:6379
-A21_API_KEY=05XkwMzHliYPkAe8XzjChmj0sANA4qum
+YOUTUBE_API_KEY={YOUTUBE_API_KEY}
+REDIS_URL={REDIS_URL}
+A21_API_KEY={A21_API_KEY}
